# ColoredQRCode

./: .gitignore  LICENSE  README.md  coloredqrcode.py  pyproject.toml  requirements.txt  test_output.txt
.github/: copilot-instructions.md
coloredqrcode/: __init__.py  core.py  error_correction.py  exceptions.py  image_processing.py  qr_processing.py  utils.py
tests/: test_coloredqrcode.py  test_coloredqrcode_color.py  test_coloredqrcode_im.py  test_core_internal.py  test_internal.py
tests/internal/: __init__.py  test_error_correction.py  test_image_processing.py  test_qr_processing.py  test_utils.py
