[tool.poetry]
name = "coloredqrcode"
version = "0.1.0"
description = "A Python project for generating colored QR codes."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
